# hack-u-kanazawa

./: README.md  docker-compose.yml
haskell-app/: CHANGELOG.md  Dockerfile  LICENSE  README.md  haskell-app.cabal
haskell-app/.stack-work/: stack.sqlite3
haskell-app/.stack-work/ghci/01801218/: cabal_macros.h
haskell-app/.stack-work/ghci/0aeea725/: cabal_macros.h
haskell-app/.stack-work/ghci/1870ebf1/: cabal_macros.h
haskell-app/.stack-work/ghci/3cd965dd/: cabal_macros.h
haskell-app/.stack-work/ghci/5a62bca1/: cabal_macros.h
haskell-app/.stack-work/ghci/61203c8c/: cabal_macros.h
haskell-app/.stack-work/ghci/b3a3af3e/: cabal_macros.h
haskell-app/.stack-work/ghci/cd853461/: cabal_macros.h
haskell-app/app/: Main.hs
haskell-app/app/Account/: Login.hs  Register.hs  UserTypes.hs  Userdata.hs
haskell-app/app/DB/: DBconnection.hs  Models.hs
haskell-app/app/Game/: Data.hs  GameTypes.hs  Logic.hs
haskell-app/app/Video/: Process.hs
python-app/: Dockerfile  app.py  requirements.txt
